<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_web_client_id">140753580504-nc23j62m4nd8odn9ggiennirps2ob6uc.apps.googleusercontent.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_unit_select">Unit Selection</string>
    <string name="menu_distance">Distance calculator</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name">Distance Track</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="status_tracking_active">Status: Tracking Active</string>
    <string name="status_not_tracking">Status: Not Tracking</string>
</resources>